# flytefit

./: Dockerfile  README.md  pyproject.toml
screenshots-logs/: 2.5.2.log.txt  3.1.0.log.txt
workflows/: flytetest.py  mathexample.py
